# course_netology

./: .gitignore  README.md
1.10_1/: main.cpp
1.10_2/: main.cpp
1.10_3/: main.cpp
1.11/: main.cpp
1.11_1/: main.cpp
1.11_2/: main.cpp
1.12_04/: main.cpp
1.2_01/: main.cpp
1.2_02/: main.cpp
1.3_01/: main.cpp
1.3_03/: main.cpp
1.3_04/: main.cpp
1.5_04/: main.cpp
1.6_01/: main.cpp
1.6_03/: main.cpp
1.6_04/: main.cpp
1.6_04dop/: main.cpp
1.7_01/: main.cpp
1.7_02dop/: main.cpp
1.8_01/: main.cpp
1_diplom/: in.txt  main.cpp  main.exee
algocpp-homeworks/1/1/: answer.md
algocpp-homeworks/1/2/: 2.cpp  2.vcxproj
cppm-homeworks/02/1/lesson_02_01/: lesson_02_01.slnx
cppm-homeworks/02/2/: settings.VisualStudio.json
cppm-homeworks/03/1/: lesson_3_1.cpp  lesson_3_1.slnx  lesson_3_1.vcxproj  lesson_3_1.vcxproj.filters
cppm-homeworks/03/2/: lesson_3_2.cpp  lesson_3_2.slnx  lesson_3_2.vcxproj  lesson_3_2.vcxproj.filters
cppm-homeworks/04/1/: lesson_4_1.cpp  lesson_4_1.slnx  lesson_4_1.vcxproj  lesson_4_1.vcxproj.filters
cppm-homeworks/04/2/: lesson_4_2.cpp  lesson_4_2.slnx  lesson_4_2.vcxproj  lesson_4_2.vcxproj.filters
cppm-homeworks/05/1/: lesson_5_1.cpp  lesson_5_1.slnx  lesson_5_1.vcxproj  lesson_5_1.vcxproj.filters
cppm-homeworks/05/2/: lesson_5_2.cpp  lesson_5_2.slnx  lesson_5_2.vcxproj  lesson_5_2.vcxproj.filters
cppm-homeworks/05/3/: lesson_5_3.cpp  lesson_5_3.slnx  lesson_5_3.vcxproj  lesson_5_3.vcxproj.filters
cppm-homeworks/06/01/: 01.cpp  01.slnx  01.vcxproj  01.vcxproj.filters  calculator.cpp  calculator.h
cppm-homeworks/06/02/: 02.vcxproj  02.vcxproj.filters  counter.cpp  counter.h  lesson_3_2.cpp
cppm-homeworks/06/03/: 03.cpp  03.slnx  03.vcxproj  03.vcxproj.filters  Figure.h  Quadrilateral.cpp  Quadrilateral.h  RightAngTriangle.cpp  Square.h
cppm-homeworks/07/01/: 01.cpp  01.slnx  01.vcxproj
cppm-homeworks/07/02/: 02.cpp  02.vcxproj
cppm-homeworks/08/01/: 01.cpp  01.slnx  01.vcxproj
cppm-homeworks/08/02/: 02.cpp  02.slnx  02.vcxproj  02.vcxproj.filters  EquilateralTriangle.cpp  EquilateralTriangle.h  ExceptionFigure.cpp  ExceptionFigure.h  FRectangle.cpp  FRectangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rhomb.cpp  Rhomb.h  RightAngTriangle.cpp  RightAngTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
cppm-homeworks/09/01/: 01.cpp  01.vcxproj
cppm-homeworks/09/02/: 02.cpp  02.slnx  02.vcxproj
cppm-homeworks/10/02/: 02.cpp  CMakeLists.txt  EquilateralTriangle.h  FRectangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.h  Rhomb.h  RightAngTriangle.h  Triangle.h
cppm-homeworks/11/01/: 01.cpp  01.slnx  01.vcxproj
cppm-homeworks/11/02/: 02.cpp  02.slnx  02.vcxproj
cppm-homeworks/11/03/: 03.slnx  03.vcxproj  03.vcxproj.filters  CMakeLists.txt
cppm-homeworks/11/03/03planB/: CMakeLists.txt  application.cpp  mydynlib.lib
cppm-homeworks/11/03/mydynlib/: mydynlib.cpp  mydynlib.h  mydynlib.vcxproj  mydynlib.vcxproj.filters
cppm-homeworks/11/03_var2/: 03.cpp  03.h  03.slnx  03.vcxproj  03.vcxproj.filters  CMakeLists.txt
cppm-homeworks/11/03_var2/second/: CMakeLists.txt  second.cpp  second.h  second.slnx  second.vcxproj  second.vcxproj.filters
cppm-homeworks/11/03_var3/: 03.slnx  CMakeLists.txt
cppm-homeworks/11/04/: 03.vcxproj  04.cpp  04.slnx  EquilateralTriangle.cpp  FRectangle.cpp  Figure.h  LibApi.h  Rhomb.cpp  RightAngTriangle.h  fig.vcxproj  fig.vcxproj.filters
cppm-homeworks/11/05/: 04.h  04.slnx  04.vcxproj  04.vcxproj.filters  CMakeLists.txt  Figure.cpp  Figure.h  IsoscelesTriangle.h  Parallelogram.h  Rhomb.h  Square.h  Triangle.cpp  Triangle.h
cppm-homeworks/11/05/05planB/: 04.cpp  CMakeLists.txt  EquilateralTriangle.h  FRectangle.h  Parallelogram.cpp  Quadrilateral.h  Square.cpp  fig.exp  fig.lib
cppm-homeworks/12/02/: extended_array.h  msvc.cpp
cppm-homeworks/12/03/: extended_array.h  msvc.cpp
cppm-homeworks/cppm-diplom/: CMakeLists.txt
cppm-homeworks/cppm-diplom/app/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h  main.cpp
cppm-homeworks/cppm-diplom/lib/race/inc/: Race.h
cppm-homeworks/cppm-diplom/lib/transport/: AirTransport.cpp  AirTransport.h  BootsAllTerrain.cpp  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  CamelFast.cpp  CarpetPlane.cpp  CarpetPlane.h  Centaur.cpp  Eagle.cpp  Eagle.h  GndTransport.cpp  GndTransport.h  Race.cpp  Race.h  RaceType.h  Transport.cpp  Transport.h
cppm-homeworks/cppm-diplom/lib/transport/inc/: AirTransport.h  BootsAllTerrain.h  Broom.h  Camel.h  CamelFast.h  CarpetPlane.h  Centaur.h  Eagle.h  GndTransport.h  LibApi.h  Race.h  RaceType.h  Transport.h
cppm-homeworks/cppm-diplom/lib/transport/src/: AirTransport.cpp  Broom.cpp  Camel.cpp  CamelFast.cpp  CarpetPlane.cpp  Centaur.cpp  Eagle.cpp  GndTransport.cpp  Race.cpp  Transport.cpp
cppm-homeworks/cppm-diplom/msvc/: .clang-format  msvc.slnx  msvc.vcxproj  msvc.vcxproj.filters  tests.vcxproj  transportRace.vcxproj  transportRace.vcxproj.filters
cppm-homeworks/cppm-diplom/test/: test.cpp  test.vcxproj  test.vcxproj.filters
cppm-homeworks/cppm-diplom/tests/: test.cpp  tests.cpp  tests.vcxproj
cpps-homeworks/1.11_2/: main.cpp
cpps-homeworks/1.12_01/: main.cpp
cpps-homeworks/1.12_02/: main.cpp
cpps-homeworks/1.12_03/: main.cpp
cpps-homeworks/1.1_01/: main.cpp
cpps-homeworks/1.2_01/: main.cpp
cpps-homeworks/1.3_02/: main.cpp
cpps-homeworks/1.3_for practice_1/: main.cpp
cpps-homeworks/1.3_for practice_2/: main.cpp
cpps-homeworks/1.4_01/: main.cpp
cpps-homeworks/1.4_02/: main.cpp
cpps-homeworks/1.4_03/: main.cpp
cpps-homeworks/1.5_01/: main.cpp
cpps-homeworks/1.5_02/: main.cpp
cpps-homeworks/1.5_03/: main.cpp
cpps-homeworks/1.7_02/: main.cpp
cpps-homeworks/1.8_02/: main.cpp
cpps-homeworks/1.9_01/: main.cpp
cpps-homeworks/1.9_02/: main.cpp
cpps-homeworks/1.9_03/: main.cpp
cpps-homeworks/1_diplom/: main.cpp
(+45 files in other folders)
